--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,28 @@
-# Configuração do servidor
 server.port=8080
 
-# Configuração do H2 Database
-spring.datasource.url=jdbc:h2:mem:deliverydb
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:delivery
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# Console H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# JPA/Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 
-# Configurações de desenvolvimento
-spring.devtools.restart.enabled=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
 
-# Configurações específicas para JDK 21
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+
+logging.level.org.hibernate.stat=DEBUG
+
+spring.devtools.restart.enabled=true
 spring.jpa.open-in-view=false
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.com.deliverytech.delivery_api=INFO
